b=707722 select config in CreatePixmap to match Pixmap format r=mattwoodrow